// Diagrama E/R Sistema ACEX - Código DBML
// Usar en: https://dbdiagram.io/

Table Departamento {
  Id int [pk, increment]
  Nombre nvarchar(200)
  Descripcion nvarchar(500)
}

Table Profesor {
  Uuid uniqueidentifier [pk]
  Nombre nvarchar(100)
  Apellidos nvarchar(200)
  Email nvarchar(200) [unique]
  Telefono nvarchar(20)
  FotoUrl nvarchar(max)
  Activo bit
  DepartamentoId int [ref: > Departamento.Id]
}

Table Usuario {
  Id uniqueidentifier [pk]
  NombreUsuario nvarchar(200) [unique]
  Password nvarchar(256)
  Rol nvarchar(50)
  Activo bit
  FechaCreacion datetime2
  ProfesorUuid uniqueidentifier [ref: - Profesor.Uuid]
}

Table Actividad {
  Id int [pk, increment]
  Nombre nvarchar(200)
  Descripcion nvarchar(1000)
  FechaInicio datetime2
  FechaFin datetime2
  Estado nvarchar(20) [note: 'Pendiente/Aprobada/Cancelada']
  Tipo nvarchar(20) [note: 'Complementaria/Extraescolar']
  PresupuestoEstimado decimal(18,2)
  CostoReal decimal(18,2)
  FolletoUrl nvarchar(max)
  PrecioTransporte decimal(18,2)
  PrecioAlojamiento decimal(18,2)
  TransporteReq int [note: '0=No, 1=Sí, 2=A determinar']
  AlojamientoReq int [note: '0=No, 1=Sí, 2=A determinar']
  FechaCreacion datetime2
  ResponsableId uniqueidentifier [ref: > Profesor.Uuid]
  LocalizacionId int [ref: > Localizacion.Id]
  EmpTransporteId int [ref: > EmpTransporte.Id]
  AlojamientoId int [ref: > Alojamiento.Id]
}

Table Foto {
  Id int [pk, increment]
  Url nvarchar(max)
  UrlThumbnail nvarchar(max)
  Descripcion nvarchar(500)
  FechaSubida datetime2
  TamanoBytes bigint
  ActividadId int [ref: > Actividad.Id]
}

Table Contrato {
  Id int [pk, increment]
  NombreProveedor nvarchar(200)
  Descripcion nvarchar(1000)
  Monto decimal(18,2)
  FechaContrato datetime2
  PresupuestoUrl nvarchar(max)
  FacturaUrl nvarchar(max)
  FechaCreacion datetime2
  ActividadId int [ref: > Actividad.Id]
}

Table GastoPersonalizado {
  Id int [pk, increment]
  Concepto nvarchar(200)
  Cantidad decimal(18,2)
  FechaCreacion datetime2
  ActividadId int [ref: > Actividad.Id]
}

Table Localizacion {
  Id int [pk, increment]
  Nombre nvarchar(200)
  Direccion nvarchar(500)
  Ciudad nvarchar(100)
  CodigoPostal nvarchar(20)
  Provincia nvarchar(100)
  Pais nvarchar(100)
  Latitud decimal(10,8)
  Longitud decimal(11,8)
  Descripcion nvarchar(max)
}

Table ActividadLocalizacion {
  Id int [pk, increment]
  EsPrincipal bit
  Orden int
  TipoLocalizacion nvarchar(50)
  Descripcion nvarchar(500)
  FechaAsignacion datetime2
  ActividadId int [ref: > Actividad.Id]
  LocalizacionId int [ref: > Localizacion.Id]
  
  indexes {
    (ActividadId, LocalizacionId) [unique]
  }
}

Table Curso {
  Id int [pk, increment]
  Nombre nvarchar(100)
  Nivel nvarchar(10) [note: 'ESO/BACH/FP']
  Activo bit
}

Table Grupo {
  Id int [pk, increment]
  Nombre nvarchar(100)
  NumeroAlumnos int
  CursoId int [ref: > Curso.Id]
}

Table GrupoPartic {
  Id int [pk, increment]
  NumeroParticipantes int
  FechaRegistro datetime2
  ActividadId int [ref: > Actividad.Id]
  GrupoId int [ref: > Grupo.Id]
}

Table ProfParticipante {
  Id int [pk, increment]
  FechaRegistro datetime2
  Observaciones nvarchar(500)
  ActividadId int [ref: > Actividad.Id]
  ProfesorUuid uniqueidentifier [ref: > Profesor.Uuid]
}

Table EmpTransporte {
  Id int [pk, increment]
  Nombre nvarchar(200)
  CIF nvarchar(50)
  Telefono nvarchar(20)
  Email nvarchar(200)
  Direccion nvarchar(500)
}

Table Alojamiento {
  Id int [pk, increment]
  Nombre nvarchar(200)
  Direccion nvarchar(300)
  Ciudad nvarchar(100)
  CodigoPostal nvarchar(20)
  Provincia nvarchar(100)
  Telefono nvarchar(20)
  Email nvarchar(200)
  Web nvarchar(max)
  TipoAlojamiento nvarchar(50)
  NumeroHabitaciones int
  CapacidadTotal int
  Activo bit
}

Table FcmToken {
  Id int [pk, increment]
  UsuarioId nvarchar(450)
  Token nvarchar(500)
  DeviceId nvarchar(200)
  DeviceType nvarchar(50)
  Activo bit
  FechaCreacion datetime2
  UltimaActualizacion datetime2
}
